--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <h1>My Play List</h1>
+    <div>
+        <h1>My Play List</h1>
+    </div>
 
     <div class="pic-woman">
         <img src="/images/woman.jpg" alt="dancing woman">
