--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div>
+  <!--<div>
         <h1>My Play List</h1>
-    </div>
+    </div> -->
 
     <div class="pic-woman">
         <img src="/images/woman.jpg" alt="dancing woman">
