--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-  <!--<div>
+    <div>
         <h1>My Play List</h1>
-    </div> -->
+    </div> 
 
     <div class="pic-woman">
-        <img src="/images/woman.jpg" alt="dancing woman">
+        <img src="images/woman.jpg" alt="dancing woman">
 
     </div>
     
@@ -53,7 +53,7 @@
     </div>
 
     <div class="pic-man">
-        <img src="/images/man.jpg" alt="dancing man">
+        <img src="images/man.jpg" alt="dancing man">
 
     </div>
 
